# MOTScope

./: .gitignore  PLAN_MOTSCOPE_CANVAS_REFINEMENT_V4.md  PLAN_MOTSCOPE_UI_REFINEMENT_V3.md  PLAN_MOT_VIEWER_FIX_UI_V2.md  PLAN_MOT_VIEWER_UPGRADE.md  README.md  app.py  pyproject.toml  requirements.txt
mot_viewer/: __init__.py
mot_viewer/datasets/: models.py  registry.py
mot_viewer/routes/: api.py  pages.py
mot_viewer/services/: annotations.py  export_manager.py  jobs.py  video_cache.py  viewer.py
scripts/: smoke_check.py
static/: app.js  style.css
templates/: index.html
