[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "MOTScope"
version = "0.1.0"
description = "A lightweight browser-based visual inspection tool for multi-object tracking datasets."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "Flask>=3.0",
  "opencv-python>=4.8",
  "numpy>=1.24",
  "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["mot_viewer*"]
